--- a/html/index.html
+++ b/html/index.html
@@ -11,10 +11,9 @@
     <link rel="stylesheet" href="css/screen.min.css">
 </head>
 
-<body>
-
+<body class="can-move">
     <h1>Hello world lmao</h1>
-
+    <div id="player">player</div>
 </body>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 <script type="text/javascript" src="/js/bundle.min.js"></script>
