got moving with bounding boxes

--- a/html/index.html
+++ b/html/index.html
@@ -12,8 +12,15 @@
 </head>
 
 <body class="can-move">
-    <h1>Hello world lmao</h1>
-    <div id="player">player</div>
+    <section id="main-ui">
+        <h1>Hello world lmao</h1>
+    </section>
+    <section id="stage"> <!-- this is the bounding box that the player can move -->
+        <div id="player"> <!-- This is our player object -->
+            <span class="face">*_*</span>
+            <span class="player-name">player</span>
+        </div>
+    </section>
 </body>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 <script type="text/javascript" src="/js/bundle.min.js"></script>
