getting js to work on gh pages

--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,6 @@
         </div>
     </section>
 </body>
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-<script type="text/javascript" src="/js/bundle.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+<script type="text/javascript" src="js/bundle.min.js"></script>
 </html>
